--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://renderthat.join.com/jobs/467765-full-stack-developer-m-w-d'>Job @ RenderThat & Co. KG (K?ln): Full-Stack Devel... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://www.stoutsystems.com/job/2904-SM/'>Programmer Analyst (Full Stack Web)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
@@ -108,7 +112,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Jscrambler/743999698574379-senior-javascript-fullstack-developer-architect'>Jscrambler Senior JavaScript FullStack Developer / Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Jscrambler/743999698574379-senior-javascript-fullstack-developer-architect'>Jscrambler Senior JavaScript FullStack Developer / Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -144,7 +148,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/codility/bdda66d4-9157-45a0-a269-70c29feab7fb'>Codility - Fullstack Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/codility/bdda66d4-9157-45a0-a269-70c29feab7fb'>Codility - Fullstack Developer</a></h5> 
 <p><span class="badge badge-light">Warsaw, Poland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -196,7 +200,7 @@
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/hibrrc69q4uehngfgmr1tdpehh'>Senior Full Stack Software Engineer | CardinalHire</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/hibrrc69q4uehngfgmr1tdpehh'>Senior Full Stack Software Engineer | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -208,7 +212,7 @@
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=oZisbfwE&__jvst=Employee&__jvsd=sT2QIgwe&__jvsc=Twitter&bid=nHodpMwY'>Brandwatch Careers - Full Stack Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=oZisbfwE&__jvst=Employee&__jvsd=sT2QIgwe&__jvsc=Twitter&bid=nHodpMwY'>Brandwatch Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -266,7 +270,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Kamernet/743999698473531-senior-fullstack-net-developer'>Kamernet Senior Fullstack .Net Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Kamernet/743999698473531-senior-fullstack-net-developer'>Kamernet Senior Fullstack .Net Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -282,7 +286,7 @@
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/c5f7bkffpe9nfuzhwpy5u3e41o'>Full Stack Programmer II  | Current Openings</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/c5f7bkffpe9nfuzhwpy5u3e41o'>Full Stack Programmer II  | Current Openings</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CAUnited States  Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -374,7 +378,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698458405-stage-de-developpement-fullstack-java-h-f-'>ASI STAGE DE D?VELOPPEMENT FULLSTACK JAVA (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698458405-stage-de-developpement-fullstack-java-h-f-'>ASI STAGE DE D?VELOPPEMENT FULLSTACK JAVA (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -398,7 +402,7 @@
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/beetalents/ec5e4f16-5238-45b1-b1b9-8c11545ce1a7'>Bee Talents - Fullstack RoR Developer - Pomar/Pixie [up to 17k PLN net B2B] (PL)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/beetalents/ec5e4f16-5238-45b1-b1b9-8c11545ce1a7'>Bee Talents - Fullstack RoR Developer - Pomar/Pixie [up to 17k PLN net B2B] (PL)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -422,7 +426,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Version1/743999698140717-fullstack-net-developer'>Version 1 Fullstack .Net Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999698140717-fullstack-net-developer'>Version 1 Fullstack .Net Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -454,10 +458,6 @@
 <hr/>
 <h5><a href='http://intellipro.applytojob.com/apply/7v1DShLMAa/Software-EngineerFull-Stack-Developer'>Software Engineer/Full Stack Developer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA  San Francisco</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999698433448-software-engineer-square-capital-full-stack'>Square Software Engineer, Square Capital - Full Stack | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
